--- a/_posts/2019-04-19-P0023.md
+++ b/_posts/2019-04-19-P0023.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 35+ అంకుల్స్ బ్యాచ్... ఈ 35ఏళ్ల
+title: wefrgrgrg
 author: sal
 image: assets/images/0023.jpg
 categories: [telugu]
