--- a/_posts/2019-11-15-P0003.md
+++ b/_posts/2019-11-15-P0003.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Whatsapp message . తెలుగు భాషని
+title: Whatsapp message . 
 author: sal
 image: assets/images/0003.jpg
 categories: [telugu]
