--- a/_posts/2020-03-24-P0004.md
+++ b/_posts/2020-03-24-P0004.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: కరోనా దశలు(స్టేజ్-1,2 & 3) అంటే
+title: grfhlkSfhLkfj
 author: sal
 image: assets/images/0004.jpg
 categories: [telugu]
