--- a/_posts/2020-07-07-P0007.md
+++ b/_posts/2020-07-07-P0007.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: స్వర్గలోకంలో సభ నడుస్తున్నది .
+title: oi rjrfjr gF v fFFv
 author: sal
 image: assets/images/0007.jpg
 categories: [telugu]
