--- a/_posts/2020-10-08-P0010.md
+++ b/_posts/2020-10-08-P0010.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: ☸️☸️☸️☸️☸️☸️☸️☸️☸️ నాలుగో పాదం!
+title: oi rjrfjr gF v fFFv
 author: sal
 image: assets/images/0010.jpg
 categories: [telugu]
