--- a/_posts/2020-10-23-P0012.md
+++ b/_posts/2020-10-23-P0012.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: వాత్సల్య గోదావరి రచన: శ్రీమతి మణి
+title: oi rjrfjr gF v fFFv
 author: sal
 image: assets/images/0012.jpg
 categories: [telugu]
