--- a/_posts/2020-11-15-P0014.md
+++ b/_posts/2020-11-15-P0014.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: వెటకారాల దారిలో గోదారి (ఎల్లాప్రగడ
+title: gjS vDFv JDFPbhdfh
 author: sal
 image: assets/images/0014.jpg
 categories: [telugu]
