--- a/_posts/2021-01-25-P0016.md
+++ b/_posts/2021-01-25-P0016.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: వివాహ విషయం లో జాతక పొంతన కొన్ని
+title: gjS vDFv JDFPbhdfh
 author: sal
 image: assets/images/0016.jpg
 categories: [telugu]
