--- a/_posts/2021-05-24-P0024.md
+++ b/_posts/2021-05-24-P0024.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 🥭🥭🥭🥭🥭🥭🥭🥭వంటింటి వైపు రాగానే తియ్యటి
+title: gjS vDFv JDFPbhdfh
 author: sal
 image: assets/images/0024.jpg
 categories: [telugu]
