--- a/_posts/2019-08-03-P0002.md
+++ b/_posts/2019-08-03-P0002.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: చాలా మంచి పోస్ట్ ! ఆత్మ పరిశీలన
+title: egdhffgreaethzfgd
 author: sal
 image: assets/images/0002.jpg
 categories: [telugu]
