--- a/_posts/2020-07-04-P0006.md
+++ b/_posts/2020-07-04-P0006.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: oi rjrfjr gF v fFFv
+title: వంటింటి వైపు రాగానే తియ్యటి వాసన
 author: sal
 image: assets/images/0006.jpg
 categories: [telugu]
