pushing more telugu and removing all emoticions

--- a/_posts/2017-01-20-P0021.md
+++ b/_posts/2017-01-20-P0021.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: test
+title: తీవ్ర మనస్తాపం తో తీసుకున్న నిర్ణయం
 author: sal
 image: assets/images/0021.jpg
 categories: [telugu]
