--- a/_posts/2020-10-03-P0008.md
+++ b/_posts/2020-10-03-P0008.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: oi rjrfjr gF v fFFv
+title: బాలుకు నివాళి ఎమ్బీయస్ ప్రసాద్
 author: sal
 image: assets/images/0008.jpg
 categories: [telugu]
