--- a/_posts/2020-10-20-P0011.md
+++ b/_posts/2020-10-20-P0011.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: oi rjrfjr gF v fFFv
+title: గోరంత దీపం forwarding as it is
 author: sal
 image: assets/images/0011.jpg
 categories: [telugu]
