--- a/_posts/2020-10-29-P0013.md
+++ b/_posts/2020-10-29-P0013.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Grand Parents" 
+title: "Grand Parents" "ఈ గ్రాండ్ పేరెంట్స్
 author: sal
 image: assets/images/0013.jpg
 categories: [telugu]
