--- a/_posts/2017-06-23-P0022.md
+++ b/_posts/2017-06-23-P0022.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 1234
+title: పార్కులో ఒక పెద్దింటబ్బాయి ఒక చిన్నింటి
 author: sal
 image: assets/images/0022.jpg
 categories: [telugu]
