--- a/_posts/2020-12-11-P0015.md
+++ b/_posts/2020-12-11-P0015.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: gjS vDFv JDFPbhdfh
+title: ఋణం ( మంచి కధ తప్పక చదవండి) అబ్బబ్బా
 author: sal
 image: assets/images/0015.jpg
 categories: [telugu]
