--- a/_posts/2021-03-21-P0018.md
+++ b/_posts/2021-03-21-P0018.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: gjS vDFv JDFPbhdfh
+title: విశాఖ పట్నం నుంచి లక్ష్మి గాయత్రి
 author: sal
 image: assets/images/0018.jpg
 categories: [telugu]
