--- a/_posts/2021-05-24-P0019.md
+++ b/_posts/2021-05-24-P0019.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: gjS vDFv JDFPbhdfh
+title: " అనుష్ఠానం " నేను ఎప్పుడు " అనుష్ఠానానికి
 author: sal
 image: assets/images/0019.jpg
 categories: [telugu]
